--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -94,17 +94,19 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 26
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.react_native_minor_api_app"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -136,10 +138,27 @@ android {
 }
 
 dependencies {
+    implementation "com.android.support:multidex:1.0.3"
+    implementation project(':react-native-firebase')
+    implementation project(':react-native-google-signin')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-fbsdk')
     implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "com.android.support:appcompat-v7:23.0.1"
+    implementation "com.android.support:appcompat-v7:26.1.0"
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.facebook.android:facebook-android-sdk:4.34.0'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation "com.google.firebase:firebase-messaging:17.1.0"
+    implementation "com.google.firebase:firebase-analytics:16.0.1"
+    implementation "com.google.firebase:firebase-firestore:17.0.2"
+    implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
+    implementation(project(":react-native-google-signin")){         
+        exclude group: "com.google.android.gms" // very important
+    }
+    implementation "com.google.android.gms:play-services-base:15.0.1"
+    implementation 'com.google.android.gms:play-services-auth:15.0.1' // should be at least 15.0.0 to work with most recent APIS
+    implementation "com.google.android.gms:play-services-analytics:16.0.1"
 }
 
 // Run this once to be able to run the application with BUCK
@@ -148,3 +167,6 @@ task copyDownloadableDepsToLibs(type: Copy) {
     from configurations.compile
     into 'libs'
 }
+
+apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
