--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,10 +4,11 @@ buildscript {
     repositories {
         jcenter()
         google()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-
+        classpath 'com.google.gms:google-services:4.0.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,7 +17,9 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
+        google()
         jcenter()
+        maven {url "https://maven.google.com"}
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
