--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "native-base": "^2.6.1",
     "react": "16.3.1",
     "react-native": "0.55.4",
+    "react-native-fbsdk": "^0.7.0",
+    "react-native-firebase": "^4.2.0",
+    "react-native-google-signin": "^0.12.0",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^2.5.5",
     "react-navigation-material-bottom-tabs": "^0.3.0"
