--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,8 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-maps')
+    implementation project(':react-native-device-info')
     implementation "com.android.support:multidex:1.0.3"
     implementation project(':react-native-firebase')
     implementation project(':react-native-google-signin')
