--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-device-info": "^0.22.2",
     "react-native-fbsdk": "^0.7.0",
     "react-native-firebase": "^4.2.0",
+    "react-native-gifted-chat": "^0.4.3",
     "react-native-google-signin": "^0.12.0",
     "react-native-maps": "^0.21.0",
     "react-native-vector-icons": "^4.6.0",
